@startuml "ERD SKM"

entity Question {
    * id: number <<PK>>
    --
    * question: string
    * acronim: string
    * option_1: string
    * option_2: string
    * option_3: string
    * option_4: string
    * status: boolean
}

entity Responden {
    *id: number
    --
    name: string
    email: string
    address: string
    phone: string
    age: number
    education: string
    profession: string
    service_type: string
}

entity Response {
    *id: number
    --
    *question_id: number <<FK>>
    *responden_id: number <<FK>>
    *select_option: number
    created_at: datetime
}

Question ||--o{ Response 
Responden ||--o{ Response


@enduml
